# swagger_server/controllers/general_stock_info_controller.py
@@ -13,11 +13,11 @@ from swagger_server.exceptions import CustomException
 
 
 from swagger_server.controllers.get_historical_data import get_historical_data_polygon, get_historical_data_polygon_updated, get_historical_data_yfinance
-from swagger_server.controllers.date_util import get_end_date, get_historical_start_date, get_required_start_date, process_period
+from swagger_server.controllers.date_util import get_end_date, get_start_dates, get_dates
 
 USE_POLYGON = current_app.config['USE_POLYGON']
 
-def calculate_candlestick_updated(symbol, period):  # noqa: E501
+def calculate_candlestick_updated(symbol, period, multiplier=1, frontend="Mobile"):  # noqa: E501
     """The average price over the specified period
 
      # noqa: E501
@@ -32,16 +32,16 @@ def calculate_candlestick_updated(symbol, period):  # noqa: E501
     :rtype: Candlestick
     """
     try:
+        #end = get_end_date()
+        #start, required_start, limit = get_start_dates(period, length=0, multiplier=multiplier, frontend=frontend)
 
-        back_period = process_period(period)
-        start=datetime.now() - timedelta(days=back_period)
-        end=datetime.now()
-
-        if USE_POLYGON == True:
-            stock=get_historical_data_polygon_updated(symbol,start,end, period)
-        else:
-            stock=get_historical_data_yfinance(symbol,start,end)
+        start, end, limit = get_dates(period,multiplier,frontend)
         
+        stock=get_historical_data_polygon_updated(symbol,start,end, period, multiplier)
+        
+        if len(stock) > limit:
+            stock = stock.tail(limit)
+
         stock = stock.round(2)
 
         stock.dropna(inplace=True)
@@ -53,44 +53,4 @@ def calculate_candlestick_updated(symbol, period):  # noqa: E501
         if hasattr(e,'response_code'):
             return jsonify({'error': str(e)}), e.response_code
         else:
-            print("No Attr")
-            return jsonify({'error': str(e)}), 500
-
-def calculate_candlestick(symbol, start_date, period):  # noqa: E501
-    """The average price over the specified period
-
-     # noqa: E501
-
-    :param symbol: Ticker Symbol Required
-    :type symbol: str
-    :param start_date: Start Date of Analysis in YYYY-MM-DD Format
-    :type start_date: str
-    :param period: The Analysis Period in Days from Start Date
-    :type period: int
-
-    :rtype: Candlestick
-    """
-    try:
-        start = get_required_start_date(start_date)
-        end = get_end_date(start_date,period)
-
-        if USE_POLYGON == True:
-            stock=get_historical_data_polygon(symbol,start,end)
-        else:
-            stock=get_historical_data_yfinance(symbol,start,end)
-        
-        stock['Date'] = pd.to_datetime(stock.index.astype(str), format='%Y-%M-%d')
-        stock['Date'] = stock['Date'].dt.strftime('%Y-%M-%d')
-
-        stock = stock.loc[start.date():end.date()]
-        stock = stock.round(2)
-        
-        output = Candlestick(stock['Date'].values.tolist(), stock['Close'].values.tolist(), stock['Open'].values.tolist(), stock['High'].values.tolist(), stock['Low'].values.tolist(),stock['Volume'].values.tolist(), stock['Adj Close'].values.tolist())
-
-        return output
-    except Exception as e:
-        if hasattr(e,'response_code'):
-            return jsonify({'error': str(e)}), e.response_code
-        else:
-            print("No Attr")
             return jsonify({'error': str(e)}), 500
